fix: css transition overlap

--- a/assets/styling/main.sass
+++ b/assets/styling/main.sass
@@ -17,9 +17,9 @@ img[lazy="loaded"]
 // THEME
 main
   color: var(--type)
-  background-color: var(--background-color)
-  transition: all $transition-theme
-  will-change: color, background-color
+  background: var(--background-color)
+  transition: color $transition-theme, background $transition-theme
+  will-change: color, background
 
 // BUILDING BLOCKS
 .icon
